# cloudstream-win

./: .gitignore  BRIDGE.md  BUILD.md  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
cloudstream-bridge/: build.gradle.kts  gradlew.bat  settings.gradle.kts  stacktrace.txt
cloudstream-bridge/src/main/kotlin/com/cloudstream/bridge/: CloudstreamProvider.kt  Main.kt  PluginExecutor.kt  PluginRegistry.kt  ReflectiveProviderAdapter.kt
plugins/: TEMPLATE.js  gogoanime.js  movies-tmdb.js  zoro.js
plugins/example-plugin/: Cargo.toml
plugins/example-plugin/src/: lib.rs
scripts/: build-all.ps1  bundle-jre.ps1  setup-dev.ps1
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: bookmarks.rs  downloads.rs  mod.rs  plugins.rs  repos.rs  streaming.rs
src-tauri/src/db/: mod.rs
src-tauri/src/player/: mod.rs
src-tauri/src/plugin_runtime/: js_engine.rs  mod.rs
src-tauri/src/sidecar/: mod.rs
src/api/: tauri.ts
src/components/: Layout.tsx
src/components/cards/: MediaCard.tsx
src/pages/: BookmarksPage.tsx  DownloadsPage.tsx  HistoryPage.tsx  HomePage.tsx  MediaDetailPage.tsx  PluginsPage.tsx  SearchPage.tsx
src/store/: index.ts
src/types/: index.ts
