[package]
name = "cloudstream-win"
version = "0.1.0"
description = "CloudStream for Windows - A plugin-based media streaming app"
authors = ["you"]
edition = "2021"

[lib]
name = "cloudstream_win_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "cloudstream-win"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# ── Tauri ─────────────────────────────────────────────────────────────────────
tauri               = { version = "2", features = [] }
tauri-plugin-shell  = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs     = "2"

# ── Async runtime ─────────────────────────────────────────────────────────────
tokio = { version = "1", features = ["full"] }

# ── Database (SQLite) ─────────────────────────────────────────────────────────
# runtime-tokio-rustls aligns with reqwest 0.12's rustls dependency
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "migrate", "chrono"] }

# ── HTTP client ───────────────────────────────────────────────────────────────
# reqwest 0.12 is required — 0.11 pulls in tokio-rustls 0.23 which conflicts
# with sqlx's runtime-tokio-native-tls on Windows.
reqwest      = { version = "0.12", features = ["json", "cookies", "rustls-tls", "stream"], default-features = false }
futures-util = "0.3"

# ── Serialization ─────────────────────────────────────────────────────────────
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# ── JS plugin runtime (Boa — pure Rust, no system deps) ───────────────────────
boa_engine = { version = "0.19", features = [] }

# ── JVM sidecar bridge ────────────────────────────────────────────────────────
uuid = { version = "1", features = ["v4"] }

# ── Download cancellation ─────────────────────────────────────────────────────
tokio-util = { version = "0.7", features = ["rt", "sync"] }

# ── Error handling ────────────────────────────────────────────────────────────
anyhow    = "1"
thiserror = "1"

# ── Logging ───────────────────────────────────────────────────────────────────
log        = "0.4"
env_logger = "0.11"

# ── Misc ──────────────────────────────────────────────────────────────────────
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
