[package]
name = "example-plugin"
version = "0.1.0"
edition = "2021"

# This tells Cargo to compile as a shared library (.wasm)
[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Build for WASM:
# cargo build --target wasm32-unknown-unknown --release
# Output: target/wasm32-unknown-unknown/release/example_plugin.wasm
